--- a/src/styles.css
+++ b/src/styles.css
@@ -5,5 +5,60 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.hide {
+  display: none;
+}
+
+.footer{
+  justify-content: center;
+  font-style: italic;
+}
+
+.search-div{
+  margin: 15px;
+    }
+    .search-form-field{
+        width: 88%;
+        margin-left: 15px;
+        padding: 5px 10px;
+        background-color: #c2d5f1;
+        border-radius: 5px;
+        }
+        .search-form-field div.mat-form-field-underline {
+            display: none;
+        }
+        .search-form-field div.mat-form-field-infix{
+            border-top: 0px;
+        }
+        .search-form-field div.mat-form-field-wrapper{
+          padding-bottom: 0px;
+      }
+      .search-form-field div.mat-form-field-suffix button{
+          height: 32px;
+          width: 32px;
+      }
+
+.container{
+  margin: 15px 40px;
+}
+
+.fill-remaining-space{
+  flex: 1 1 auto;
+}
+
+#table1{
+  margin: 15px;
+}
+
+mat-form-field {
+  width: 65%;
+}
+
+.button-row button{
+  margin: 5px;
+}
+
+
+
 
 
