--- a/src/app/dashboard/hopital/hopital.component.html
+++ b/src/app/dashboard/hopital/hopital.component.html
@@ -73,3 +73,18 @@
   <mat-paginator [pageSizeOptions]="[2,4,8,12,20]" [pageSize]="4" showFirstLastButtons></mat-paginator>
 
 </div>
+
+<div>
+
+  <table class="table">
+    <tr>
+      <th>Code_hopitale</th><th>Nom_hopitale</th>
+    </tr>
+    <tr *ngFor="let p of (hopitaux$| async)  ">
+      <td>{{p.Code_hopitale}}</td>
+      <td>{{p.Nom_Hopitale}}</td>
+    </tr>
+  </table>
+
+
+</div>
