--- a/src/app/dashboard/hopital/hopitalDtDialog/hopital-dt-dialog.component.html
+++ b/src/app/dashboard/hopital/hopitalDtDialog/hopital-dt-dialog.component.html
@@ -1,7 +1,7 @@
 <div fxLayoutAlign="center center" fxLayout="column">
 
-  <div>Code hopital : {{data.Code_hopitale}}</div>
-  <div>Nom  hopital : {{data.Nom_Hopitale}}</div>
+  <div>Code hopital : {{data.code_hopitale}}</div>
+  <div>Nom  hopital : {{data.nom_Hopitale}}</div>
 
   <button  mat-raised-button color="warn" (click)="onNoClick()" >Break</button>
 
