--- a/src/app/dashboard/service/serviceDtDialog/service-dt-dialog.component.html
+++ b/src/app/dashboard/service/serviceDtDialog/service-dt-dialog.component.html
@@ -1,8 +1,8 @@
 
 <div fxLayoutAlign="center center" fxLayout="column">
 
-<div>Code service : {{data.Code_Service}}</div>
-<div>Nom  service : {{data.Nom_Service}}</div>
+<div>Code service : {{data.code_service}}</div>
+<div>Nom  service : {{data.nom_service}}</div>
 
 <button  mat-raised-button color="warn" (click)="onNoClick()" >Break</button>
 
