--- a/src/app/dashboard/hopital/hopital.component.html
+++ b/src/app/dashboard/hopital/hopital.component.html
@@ -25,14 +25,14 @@
 <div class="mat-elevation-z8" id="table1">
   <table mat-table [dataSource]="dataSource"   matSort>
 
-    <ng-container matColumnDef="Code_hopitale">
+    <ng-container matColumnDef="code_hopitale">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Code Hopitale </th>
-      <td mat-cell *matCellDef="let element"> {{element.Code_hopitale}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.code_hopitale}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="Nom_Hopitale">
+    <ng-container matColumnDef="nom_Hopitale">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Nom Hopitale </th>
-      <td mat-cell *matCellDef="let element"> {{element.Nom_Hopitale}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.nom_Hopitale}} </td>
     </ng-container>
 
     <ng-container matColumnDef="detail">
@@ -70,21 +70,6 @@
     <tr mat-footer-row *matFooterRowDef="['loading']" [ngClass]="{'hide':dataSource!=null}" class="footer"></tr>
     <tr mat-footer-row *matFooterRowDef="['noData']" [ngClass]="{'hide':!(dataSource!=null && dataSource.data.length==0)}" class="footer"></tr>
   </table>
-  <mat-paginator [pageSizeOptions]="[2,4,8,12,20]" [pageSize]="4" showFirstLastButtons></mat-paginator>
-
-</div>
-
-<div>
-
-  <table class="table">
-    <tr>
-      <th>Code_hopitale</th><th>Nom_hopitale</th>
-    </tr>
-    <tr *ngFor="let p of (hopitaux$| async)  ">
-      <td>{{p.Code_hopitale}}</td>
-      <td>{{p.Nom_Hopitale}}</td>
-    </tr>
-  </table>
-
+  <mat-paginator [pageSizeOptions]="[5,10,20,40]" [pageSize]="5" showFirstLastButtons></mat-paginator>
 
 </div>
