--- a/src/app/dashboard/service/service.component.html
+++ b/src/app/dashboard/service/service.component.html
@@ -25,14 +25,14 @@
 <div class="mat-elevation-z8" id="table1">
   <table mat-table [dataSource]="dataSource"   matSort>
 
-    <ng-container matColumnDef="Code_Service">
+    <ng-container matColumnDef="code_service">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Code Service </th>
-      <td mat-cell *matCellDef="let element"> {{element.Code_Service}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.code_service}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="Nom_Service">
+    <ng-container matColumnDef="nom_service">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Nom Service </th>
-      <td mat-cell *matCellDef="let element"> {{element.Nom_Service}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.nom_service}} </td>
     </ng-container>
 
     <ng-container matColumnDef="detail">
@@ -70,7 +70,7 @@
     <tr mat-footer-row *matFooterRowDef="['loading']" [ngClass]="{'hide':dataSource!=null}" class="footer"></tr>
     <tr mat-footer-row *matFooterRowDef="['noData']" [ngClass]="{'hide':!(dataSource!=null && dataSource.data.length==0)}" class="footer"></tr>
   </table>
-  <mat-paginator [pageSizeOptions]="[2,4,8,12,20]" [pageSize]="4" showFirstLastButtons></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5,10,20,40]" [pageSize]="5" showFirstLastButtons></mat-paginator>
 
 </div>
 
