--- a/src/app/dashboard/service/serviceDialog/service-dialog.component.html
+++ b/src/app/dashboard/service/serviceDialog/service-dialog.component.html
@@ -1,5 +1,4 @@
 <section class="signup-form">
-  <!--<form fxLayout="column" fxLayoutAlign="center center" #f="ngForm" (ngSubmit)="onAdd(f)">-->
     <form fxLayout="column" fxLayoutAlign="center center" #f="ngForm" >
     <mat-form-field>
       <input
@@ -8,10 +7,8 @@
         placeholder="Your code service"
         ngModel
         name="Code_Service"
-        required
-        [(ngModel)]="data.Code_Service"
+        [(ngModel)]="data.code_service"
         #codeSInput="ngModel">
-      <mat-error *ngIf="codeSInput.hasError('required')">code must not be empty.</mat-error>
     </mat-form-field>
     <mat-form-field >
       <input
@@ -21,12 +18,11 @@
         ngModel
         name="Nom_Service"
         required
-        [(ngModel)]="data.Nom_Service"
+        [(ngModel)]="data.nom_service"
         #nomSInput="ngModel">
         <mat-error *ngIf="nomSInput.hasError('required')">nom must not be empty.</mat-error>
     </mat-form-field>
     <div class="button-row">
-      <!--<button type="submit" mat-raised-button color="primary" [disabled]="f.invalid" [mat-dialog-close]="data">Submit</button>-->
       <button  mat-raised-button color="primary" [disabled]="f.invalid" [mat-dialog-close]="data">Submit</button>
       <button  mat-raised-button color="warn" (click)="onNoClick()" >Cancel</button>
 
