--- a/src/app/dashboard/departement/departement.component.html
+++ b/src/app/dashboard/departement/departement.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <mat-toolbar color="primary">
     <span class="fill-remaining-space"></span>
-    <span>Fiches</span>
+    <span>Departements</span>
     <span class="fill-remaining-space"></span>
   </mat-toolbar>
 </div>
@@ -25,9 +25,14 @@
 <div class="mat-elevation-z8" id="table1">
   <table mat-table [dataSource]="dataSource"   matSort>
 
-    <ng-container matColumnDef="numDossier">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> numDossier  </th>
-      <td mat-cell *matCellDef="let element"> {{element.nDossierFiche}} </td>
+    <ng-container matColumnDef="code">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Code  </th>
+      <td mat-cell *matCellDef="let element"> {{element.code}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="nom">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Nom  </th>
+      <td mat-cell *matCellDef="let element"> {{element.nom}} </td>
     </ng-container>
 
     <ng-container matColumnDef="detail">
