--- a/src/app/dashboard/organisme/organisme.component.html
+++ b/src/app/dashboard/organisme/organisme.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <mat-toolbar color="primary">
     <span class="fill-remaining-space"></span>
-    <span>Fiches</span>
+    <span>Organismes</span>
     <span class="fill-remaining-space"></span>
   </mat-toolbar>
 </div>
@@ -25,9 +25,39 @@
 <div class="mat-elevation-z8" id="table1">
   <table mat-table [dataSource]="dataSource"   matSort>
 
-    <ng-container matColumnDef="numDossier">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> numDossier  </th>
-      <td mat-cell *matCellDef="let element"> {{element.nDossierFiche}} </td>
+    <ng-container matColumnDef="code">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Code </th>
+      <td mat-cell *matCellDef="let element"> {{element.code}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="nom">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Nom </th>
+      <td mat-cell *matCellDef="let element"> {{element.nom}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="adresse">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Adresse </th>
+      <td mat-cell *matCellDef="let element"> {{element.adresse}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="tel">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Tel </th>
+      <td mat-cell *matCellDef="let element"> {{element.tel}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="contact">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Contact </th>
+      <td mat-cell *matCellDef="let element"> {{element.contact}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="type">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
+      <td mat-cell *matCellDef="let element"> {{element.type}} </td>
     </ng-container>
 
     <ng-container matColumnDef="detail">
@@ -68,3 +98,4 @@
   <mat-paginator [pageSizeOptions]="[5,10,20,40]" [pageSize]="5" showFirstLastButtons></mat-paginator>
 
 </div>
+
