--- a/src/app/dashboard/organisme/organisme-dialog/organisme-dialog.component.html
+++ b/src/app/dashboard/organisme/organisme-dialog/organisme-dialog.component.html
@@ -85,7 +85,7 @@
   </!--mat-form-field-->
   <mat-form-field appearance="fill">
     <mat-label>Your type organisme</mat-label>
-    <mat-select [(ngModel)]="data.type" [ngModelOptions]="{standalone: true}">
+    <mat-select [(ngModel)]="data.type" ngModel name="Type_Organisme" required>
       <mat-option value="Hopital">Hopital</mat-option>
       <mat-option value="Institut">Institut</mat-option>
       <mat-option value="CabinePrive">Cabine Privé</mat-option>
@@ -93,8 +93,9 @@
     </mat-select>
   </mat-form-field>
 
+
   <div class="button-row">
-    <button  mat-raised-button color="primary" [disabled]="f.invalid" [mat-dialog-close]="data">Submit</button>
+    <button  mat-raised-button color="primary" [disabled]="f.invalid" [mat-dialog-close]="data" (click)="todo(data)">Submit</button>
     <button  mat-raised-button color="warn" (click)="onNoClick()" >Cancel</button>
 
   </div>
