--- a/src/app/dashboard/user/user-dt-dialog/user-dt-dialog.component.html
+++ b/src/app/dashboard/user/user-dt-dialog/user-dt-dialog.component.html
@@ -16,8 +16,8 @@
   <div>Login User : {{data.login}}</div>
   <div>Password User : {{data.password}}</div>
   <div>Url User : {{data.url}}</div>
-  <div>User's Organisme-code  : {{data.codeOrganisme}}</div>
-  <div>User's Departement-code  : {{data.codeDepartement}}</div>
+  <div>User's Organisme-nom  : {{data.nomOrganisme}}</div>
+  <div>User's Departement-nom  : {{data.nomDepartement}}</div>
 
   <button  mat-raised-button color="warn" (click)="onNoClick()" >Break</button>
 
