--- a/src/app/dashboard/fiche/fiche.component.html
+++ b/src/app/dashboard/fiche/fiche.component.html
@@ -25,9 +25,44 @@
 <div class="mat-elevation-z8" id="table1">
   <table mat-table [dataSource]="dataSource"   matSort>
 
-    <ng-container matColumnDef="numDossier">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> numDossier  </th>
-      <td mat-cell *matCellDef="let element"> {{element.nDossierFiche}} </td>
+    <ng-container matColumnDef="code">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> code  </th>
+      <td mat-cell *matCellDef="let element"> {{element.idFiche}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="num_dossier">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> num_dossier  </th>
+      <td mat-cell *matCellDef="let element"> {{element.ndossierFiche}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="nom">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> nom  </th>
+      <td mat-cell *matCellDef="let element"> à faire </td>
+    </ng-container>
+
+    <ng-container matColumnDef="prenom">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> prenom  </th>
+      <td mat-cell *matCellDef="let element"> à faire </td>
+    </ng-container>
+
+    <ng-container matColumnDef="date_diagnostic">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> date_diagnostic  </th>
+      <td mat-cell *matCellDef="let element"> {{element.dateDiagnostique | date}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="date_enregistrement">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> date_enregistrement  </th>
+      <td mat-cell *matCellDef="let element"> {{element.dateEnregistrement | date}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="organisme">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> organisme  </th>
+      <td mat-cell *matCellDef="let element"> à faire </td>
+    </ng-container>
+
+    <ng-container matColumnDef="departement">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> departement  </th>
+      <td mat-cell *matCellDef="let element"> à faire </td>
     </ng-container>
 
     <ng-container matColumnDef="detail">
