--- a/src/app/dashboard/fiche2/fiche2.component.html
+++ b/src/app/dashboard/fiche2/fiche2.component.html
@@ -9,11 +9,20 @@
 <div class="fiche-details-container">
   <div class="left">
 
-    <div>
+    <!--<div>
       <span class="label">Organisme</span>
       <mat-form-field appearance="fill" class="item">
         <mat-select [(ngModel)]="selectedOrganisme" [ngModelOptions]="{standalone: true}" >
           <mat-option *ngFor="let item of organismes$ | async " value="{{item.nom}}">{{item.nom}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>-->
+
+    <div>
+      <span class="label">User</span>
+      <mat-form-field appearance="fill" >
+        <mat-select [(ngModel)]="selectedUser" [ngModelOptions]="{standalone: true}" >
+          <mat-option *ngFor="let item of users$ | async " value="{{item.code}}">{{item.nom}}</mat-option>
         </mat-select>
       </mat-form-field>
     </div>
@@ -31,14 +40,14 @@
   </div>
 
   <div class="right">
-    <div>
+    <!--<div>
       <span class="label">Departement</span>
       <mat-form-field appearance="fill" class="item">
         <mat-select [(ngModel)]="selectedDepartement" [ngModelOptions]="{standalone: true}">
           <mat-option *ngFor="let item of departements$ | async " value="{{item.nom}}">{{item.nom}}</mat-option>
         </mat-select>
       </mat-form-field>
-    </div>
+    </div>-->
 
     <div>
       <span class="label">Date de diagnostique</span>
@@ -83,12 +92,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <mat-form-field>
-        <mat-label>Date</mat-label>
-        <input matInput [matDatepicker]="picker9">
-        <mat-datepicker-toggle matSuffix [for]="picker9"></mat-datepicker-toggle>
-        <mat-datepicker #picker9></mat-datepicker>
-      </mat-form-field>
+      <fiche2-histoire-familiale></fiche2-histoire-familiale>
 
     </mat-expansion-panel>
 
@@ -101,15 +105,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <mat-form-field>
-        <mat-label>First name</mat-label>
-        <input matInput>
-      </mat-form-field>
-
-      <mat-form-field>
-        <mat-label>Age</mat-label>
-        <input matInput type="number" min="1">
-      </mat-form-field>
+      <fiche2-circon-de-decouverte></fiche2-circon-de-decouverte>
 
     </mat-expansion-panel>
 
@@ -121,12 +117,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <mat-form-field>
-        <mat-label>Date</mat-label>
-        <input matInput [matDatepicker]="picker1">
-        <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-        <mat-datepicker #picker1></mat-datepicker>
-      </mat-form-field>
+      <fiche2-syndrome-malformatif></fiche2-syndrome-malformatif>
     </mat-expansion-panel>
 
 
@@ -174,15 +165,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <mat-form-field>
-        <mat-label>First name</mat-label>
-        <input matInput>
-      </mat-form-field>
-
-      <mat-form-field>
-        <mat-label>Age</mat-label>
-        <input matInput type="number" min="1">
-      </mat-form-field>
+     <fiche2-biologie-moleculaire></fiche2-biologie-moleculaire>
 
     </mat-expansion-panel>
 
@@ -194,12 +177,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <mat-form-field>
-        <mat-label>Date</mat-label>
-        <input matInput [matDatepicker]="picker3">
-        <mat-datepicker-toggle matSuffix [for]="picker3"></mat-datepicker-toggle>
-        <mat-datepicker #picker3></mat-datepicker>
-      </mat-form-field>
+      <fiche2-congelation-cell></fiche2-congelation-cell>
     </mat-expansion-panel>
 
     <mat-expansion-panel>
@@ -209,12 +187,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <mat-form-field>
-        <mat-label>Date</mat-label>
-        <input matInput [matDatepicker]="picker4">
-        <mat-datepicker-toggle matSuffix [for]="picker4"></mat-datepicker-toggle>
-        <mat-datepicker #picker4></mat-datepicker>
-      </mat-form-field>
+      <fiche2-score-clinique></fiche2-score-clinique>
     </mat-expansion-panel>
 
     <mat-expansion-panel>
