--- a/src/app/dashboard/user/user.component.html
+++ b/src/app/dashboard/user/user.component.html
@@ -87,12 +87,12 @@
 
     <ng-container matColumnDef="organisme">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Organisme </th>
-      <td mat-cell *matCellDef="let element" > {{element.codeOrganisme}} </td>
+      <td mat-cell *matCellDef="let element" > {{element.nomOrganisme}} </td>
     </ng-container>
 
     <ng-container matColumnDef="departement">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Departement </th>
-      <td mat-cell *matCellDef="let element"> {{element.codeDepartement}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.nomDepartement}} </td>
     </ng-container>
 
 
