--- a/src/app/dashboard/fiche/fiche.component.html
+++ b/src/app/dashboard/fiche/fiche.component.html
@@ -37,12 +37,12 @@
 
     <ng-container matColumnDef="nom">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> nom  </th>
-      <td mat-cell *matCellDef="let element"> à faire </td>
+      <td mat-cell *matCellDef="let element"> {{element.nomPatient}} </td>
     </ng-container>
 
     <ng-container matColumnDef="prenom">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> prenom  </th>
-      <td mat-cell *matCellDef="let element"> à faire </td>
+      <td mat-cell *matCellDef="let element">{{element.prenomPatient}} </td>
     </ng-container>
 
     <ng-container matColumnDef="date_diagnostic">
@@ -57,12 +57,12 @@
 
     <ng-container matColumnDef="organisme">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> organisme  </th>
-      <td mat-cell *matCellDef="let element"> à faire </td>
+      <td mat-cell *matCellDef="let element">{{element.nomOrgUserOfFiche}}</td>
     </ng-container>
 
     <ng-container matColumnDef="departement">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> departement  </th>
-      <td mat-cell *matCellDef="let element"> à faire </td>
+      <td mat-cell *matCellDef="let element"> {{element.nomDepUserOfFiche}}</td>
     </ng-container>
 
     <ng-container matColumnDef="detail">
