--- a/src/app/dashboard/fiche2/fiche2.component.html
+++ b/src/app/dashboard/fiche2/fiche2.component.html
@@ -20,8 +20,8 @@
 
     <div>
       <span class="label">User</span>
-      <mat-form-field appearance="fill" >
-        <mat-select [(ngModel)]="selectedUser" [ngModelOptions]="{standalone: true}" >
+      <mat-form-field appearance="fill">
+        <mat-select [(ngModel)]="selectedUser" [ngModelOptions]="{standalone: true}">
           <mat-option *ngFor="let item of users$ | async " value="{{item.code}}">{{item.nom}}</mat-option>
         </mat-select>
       </mat-form-field>
@@ -129,15 +129,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <mat-form-field>
-        <mat-label>First name</mat-label>
-        <input matInput>
-      </mat-form-field>
-
-      <mat-form-field>
-        <mat-label>Age</mat-label>
-        <input matInput type="number" min="1">
-      </mat-form-field>
+      <fiche2-etude-cyto></fiche2-etude-cyto>
 
     </mat-expansion-panel>
 
@@ -149,12 +141,8 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <mat-form-field>
-        <mat-label>Date</mat-label>
-        <input matInput [matDatepicker]="picker2">
-        <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-        <mat-datepicker #picker2></mat-datepicker>
-      </mat-form-field>
+      <fiche2-signes-hema></fiche2-signes-hema>
+
     </mat-expansion-panel>
 
 
@@ -165,7 +153,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-     <fiche2-biologie-moleculaire></fiche2-biologie-moleculaire>
+      <fiche2-biologie-moleculaire></fiche2-biologie-moleculaire>
 
     </mat-expansion-panel>
 
@@ -197,12 +185,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <mat-form-field>
-        <mat-label>Date</mat-label>
-        <input matInput [matDatepicker]="picker5">
-        <mat-datepicker-toggle matSuffix [for]="picker5"></mat-datepicker-toggle>
-        <mat-datepicker #picker5></mat-datepicker>
-      </mat-form-field>
+      <fiche2-traitement></fiche2-traitement>
     </mat-expansion-panel>
 
 
@@ -211,6 +194,5 @@
 <div fxLayoutAlign="center center">
 
   <button mat-raised-button color="primary" (click)="toFiche()">Ajouter</button>
-  <button mat-raised-button color="warn"  (click)="toFiche()">Quitter</button>
+  <button mat-raised-button color="warn" (click)="toFiche()">Quitter</button>
 </div>
-
