--- a/src/app/dashboard/fiche2/etude-cyto/etude-cyto.component.html
+++ b/src/app/dashboard/fiche2/etude-cyto/etude-cyto.component.html
@@ -1,2 +1,2 @@
 <br>
-<button mat-raised-button color="primary" >+ cliquer ici pour remplir l'etude cytogenetique </button>
+<button mat-raised-button color="primary" (click)="onCreate()" >+ cliquer ici pour remplir l'etude cytogenetique </button>
