--- a/src/app/dashboard/fiche2/circon-de-decouverte/circon-de-decouverte.component.html
+++ b/src/app/dashboard/fiche2/circon-de-decouverte/circon-de-decouverte.component.html
@@ -6,7 +6,7 @@
     <span class="label">Syndrome anemyque</span>
     <mat-form-field appearance="fill">
       <mat-label>Syndrome anemyque </mat-label>
-      <mat-select [(ngModel)]="enuma1" ngModel name="sa" required>
+      <mat-select [(ngModel)]="fiche2.syndromeAnemique" ngModel name="sa" required (selectionChange)="onChangeFiche2()">
         <mat-option *ngFor="let item of tabenum1" value="{{item}}">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
@@ -16,7 +16,7 @@
     <span class="label">Enquette familliale</span>
     <mat-form-field appearance="fill">
       <mat-label>Enquette familliale </mat-label>
-      <mat-select [(ngModel)]="enuma2" ngModel name="ef" required>
+      <mat-select [(ngModel)]="fiche2.enqueteFam" ngModel name="ef" required (selectionChange)="onChangeFiche2()">
         <mat-option *ngFor="let item of tabenum1" value="{{item}}">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
@@ -31,7 +31,8 @@
         ngModel
         name="Type_Cancer"
         required
-        [(ngModel)]="typeCancer"
+        (ngModelChange)="onChangeFiche2()"
+        [(ngModel)]="fiche2.typeCancer"
         #nomHInput="ngModel">
         <mat-error *ngIf="nomHInput.hasError('required')">type must not be empty.</mat-error>
     </mat-form-field>
@@ -48,7 +49,7 @@
     <span class="label">Syndrome hémorragique</span>
     <mat-form-field appearance="fill">
       <mat-label>Syndrome hémorragique </mat-label>
-      <mat-select [(ngModel)]="enuma3" ngModel name="sh" required>
+      <mat-select [(ngModel)]="fiche2.syndromeHem" ngModel name="sh" required (selectionChange)="onChangeFiche2()">
         <mat-option *ngFor="let item of tabenum1" value="{{item}}">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
@@ -58,7 +59,7 @@
     <span class="label">Découverte fortuite</span>
     <mat-form-field appearance="fill">
       <mat-label>Découverte fortuite</mat-label>
-      <mat-select [(ngModel)]="enuma4" ngModel name="df" required>
+      <mat-select [(ngModel)]="fiche2.decouverteFort" ngModel name="df" required (selectionChange)="onChangeFiche2()">
         <mat-option *ngFor="let item of tabenum1" value="{{item}}">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
@@ -73,7 +74,8 @@
         ngModel
         name="Autres"
         required
-        [(ngModel)]="autres"
+        (ngModelChange)="onChangeFiche2()"
+        [(ngModel)]="fiche2.autreCirDec"
         #nomHInput="ngModel">
         <mat-error *ngIf="nomHInput.hasError('required')">autres must not be empty.</mat-error>
     </mat-form-field>
@@ -89,7 +91,7 @@
     <span class="label">Syndrome infectieux</span>
     <mat-form-field appearance="fill">
       <mat-label>Syndrome infectieux</mat-label>
-      <mat-select [(ngModel)]="enuma5" ngModel name="si" required>
+      <mat-select [(ngModel)]="fiche2.syndromeInf" ngModel name="si" required (selectionChange)="onChangeFiche2()">
         <mat-option *ngFor="let item of tabenum1" value="{{item}}">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
@@ -99,7 +101,7 @@
     <span class="label">Cancer</span>
     <mat-form-field appearance="fill">
       <mat-label>Cancer</mat-label>
-      <mat-select [(ngModel)]="enuma6" ngModel name="cancer" required>
+      <mat-select [(ngModel)]="fiche2.cancer" ngModel name="cancer" required (selectionChange)="onChangeFiche2()">
         <mat-option *ngFor="let item of tabenum1" value="{{item}}">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
