--- a/src/app/dashboard/fiche2/congelation-cell/congelation-cell.component.html
+++ b/src/app/dashboard/fiche2/congelation-cell/congelation-cell.component.html
@@ -1,19 +1,19 @@
 <span class="label"><strong>Congélation de cellules : </strong></span>
 <mat-form-field appearance="fill">
   <mat-label>Congélation de cellules </mat-label>
-  <mat-select [(ngModel)]="enum22" ngModel name="cdc" required>
+  <mat-select [(ngModel)]="fiche6.congelationCellule" ngModel name="cdc" required (selectionChange)="onChangeFiche6()">
     <mat-option *ngFor="let item of tabenum2 " value="{{item}}">{{item}}</mat-option>
   </mat-select>
 </mat-form-field>
 
 <br>
-<div *ngIf="enum22=='Faite'">
+<div *ngIf="fiche6.congelationCellule=='Faite'">
   <div class="row">
     <div class="column" >
       <span class="label">Laboratoire :</span>
       <mat-form-field appearance="fill">
         <mat-label>Laboratoire </mat-label>
-        <mat-select [(ngModel)]="lab1" ngModel name="resultat" required>
+        <mat-select [(ngModel)]="fiche6.labo" ngModel name="resultat" required (selectionChange)="onChangeFiche6()" >
           <mat-option *ngFor="let item of laboratoires$ | async" value="{{item.id}}">{{item.nom}}</mat-option>
         </mat-select>
       </mat-form-field>
@@ -21,8 +21,8 @@
     <div class="column" >
       <span class="label">Type de prélévement :</span>
       <mat-form-field>
-        <input type="text" matInput placeholder="Type de prélévement" ngModel name="Type_de_prélévement" required
-          [(ngModel)]="typePre" #typepreHInput="ngModel">
+        <input type="text" matInput placeholder="Type de prélévement" ngModel name="Type_de_prélévement" required (ngModelChange)="onChangeFiche6()"
+          [(ngModel)]="fiche6.typePrelevement" #typepreHInput="ngModel">
         <mat-error *ngIf="typepreHInput.hasError('required')">typepreHInput must not be empty.</mat-error>
       </mat-form-field>
     </div>
