--- a/src/app/dashboard/fiche2/patient/patient.component.html
+++ b/src/app/dashboard/fiche2/patient/patient.component.html
@@ -1,54 +1,66 @@
 <div class="row">
   <div class="column">
-    <form class="example-form">
 
       <mat-form-field class="example-full-width">
         <mat-label>Num dossier</mat-label>
-        <input matInput placeholder="the number of folder of the patient">
+        <input type="text" matInput placeholder="the number of folder of the patient" ngModel name="numDPatient"
+          required [(ngModel)]="patient.nDPatient" (ngModelChange)="onChangePatient()" #numDPatientInput="ngModel">
       </mat-form-field>
 
 
 
-      <div  class="example-full-width">
+      <div class="example-full-width">
         <mat-label>Sexe : </mat-label>
 
-        <mat-radio-group aria-label="Select an option">
+        <!--<mat-radio-group aria-label="Select an option">
           <mat-radio-button value="M">M</mat-radio-button>
           <mat-radio-button value="F">F</mat-radio-button>
+        </mat-radio-group>-->
+
+
+        <mat-radio-group name="opList" [(ngModel)]="chosenItem">
+          <mat-radio-button *ngFor="let op of list" [value]="op.name" name="opList" (change)="radioChange()">{{
+            op.name}}</mat-radio-button>
         </mat-radio-group>
+
+
       </div>
 
 
 
       <mat-form-field class="example-full-width">
         <mat-label>Adresse</mat-label>
-        <input matInput placeholder="the adress of patient">
+        <input type="text" matInput placeholder="the adress of patient" ngModel name="adressPatient" required
+          [(ngModel)]="patient.adresse" (ngModelChange)="onChangePatient()" #adressPatientInput="ngModel">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label>Tel</mat-label>
-        <input matInput placeholder="phone of the patient">
+        <input type="text" matInput placeholder="phone of the patient" ngModel name="phonePatient" required
+          [(ngModel)]="patient.tel" (ngModelChange)="onChangePatient()" #phonePatientInput="ngModel">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label>Nom de la mére</mat-label>
-        <input matInput placeholder="the name of the mother of the patient">
+        <input type="text" matInput placeholder="the name of the mother of the patient" ngModel name="nameMPatient"
+          required [(ngModel)]="patient.nomMere" (ngModelChange)="onChangePatient()" #nameMPatientInput="ngModel">
       </mat-form-field>
 
-    </form>
+
   </div>
   <div class="column">
-    <form class="example-form">
 
       <mat-form-field class="example-full-width">
         <mat-label>Nom</mat-label>
-        <input matInput placeholder="name of the patient">
+        <input type="text" matInput placeholder="name of the patient" ngModel name="namePatient" required
+          [(ngModel)]="patient.nom" (ngModelChange)="onChangePatient()" #namePatientInput="ngModel">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label>Date de naissance</mat-label>
         <mat-form-field appearance="fill" class="item">
-          <input matInput [matDatepicker]="pickero">
+          <input matInput [matDatepicker]="pickero" [(ngModel)]="patient.dateNaissance"
+            (ngModelChange)="onChangePatient()">
           <mat-datepicker-toggle matSuffix [for]="pickero"></mat-datepicker-toggle>
           <mat-datepicker #pickero></mat-datepicker>
         </mat-form-field>
@@ -57,44 +69,46 @@
 
       <mat-form-field class="example-full-width">
         <mat-label>Repère éventuel</mat-label>
-        <input matInput placeholder="eventual repere of the patient">
+        <input type="text" matInput placeholder="eventual repere of the patient" ngModel name="eventualRPatient"
+          required [(ngModel)]="patient.reperes" (ngModelChange)="onChangePatient()" #eventualRPatientInput="ngModel">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label>Prénom du pére</mat-label>
-        <input matInput placeholder="name of the father of patient">
+        <input type="text" matInput placeholder="name of the father of patient" ngModel name="nameFPatient" required
+          [(ngModel)]="patient.prenomPere" (ngModelChange)="onChangePatient()" #nameFPInput="ngModel">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label>Prénom de la mére</mat-label>
-        <input matInput placeholder="name of the mother of patient">
+        <input type="text" matInput placeholder="name of the mother of patient" ngModel name="nameMPatient" required
+          [(ngModel)]="patient.prenomMere" (ngModelChange)="onChangePatient()" #nameMPInput="ngModel">
       </mat-form-field>
 
-    </form>
+
   </div>
   <div class="column">
-    <form class="example-form">
 
       <mat-form-field class="example-full-width">
         <mat-label>Prénom</mat-label>
-        <input matInput placeholder="prenom patient">
+        <input type="text" matInput placeholder="prenom patient" ngModel name="prenomPatient" required
+          [(ngModel)]="patient.prenom" (ngModelChange)="onChangePatient()" #prenompInput="ngModel">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label>Lieu de naissance</mat-label>
-        <input matInput placeholder="place of birth of the patient">
+        <input type="text" matInput placeholder="place of birth of the patient" ngModel name="birthpPatient" required
+          [(ngModel)]="patient.lieuNaissance" (ngModelChange)="onChangePatient()" #birthpInput="ngModel">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label>Gouvernorat</mat-label>
 
 
-
-
         <div>
-          <span class="label">Departement</span>
+          <span class="label">Departement :</span>
           <mat-form-field appearance="fill" class="item">
-            <mat-select [(ngModel)]="selectedgv" [ngModelOptions]="{standalone: true}">
+            <mat-select [(ngModel)]="patient.gouvernorat" ngModel name="gouvernorat" required (selectionChange)="onChangePatient()">
               <mat-option *ngFor="let item of gouvernorat " value="{{item}}">{{item}}</mat-option>
             </mat-select>
           </mat-form-field>
@@ -105,14 +119,15 @@
 
       <mat-form-field class="example-full-width">
         <mat-label>Nom de la grand mére paternelle</mat-label>
-        <input matInput placeholder="paternal grand mother of the patient">
+        <input type="text" matInput placeholder="paternal grand mother of the patient" ngModel name="paternalgmPatient"
+          required [(ngModel)]="patient.nomGmp" (ngModelChange)="onChangePatient()" #nomGmpInput="ngModel">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label>Nom de la grand mére maternelle</mat-label>
-        <input matInput placeholder="maternal grand mother of the patient">
+        <input type="text" matInput placeholder="maternal grand mother of the patient" ngModel name="maternalgmPatient"
+          required [(ngModel)]="patient.nomGmm" (ngModelChange)="onChangePatient()" #nomGmmInput="ngModel">
       </mat-form-field>
 
-    </form>
   </div>
 </div>
