--- a/src/app/dashboard/fiche2/score-clinique/score-clinique.component.html
+++ b/src/app/dashboard/fiche2/score-clinique/score-clinique.component.html
@@ -1,14 +1,14 @@
 <span class="label">Score Clinique :</span>
 <mat-form-field>
-  <input type="text" matInput placeholder="Score Clinique" ngModel name="Score_Clinique" required [(ngModel)]="scoreClinique"
-    #nomHInput="ngModel">
+  <input type="number" matInput placeholder="Score Clinique" ngModel name="Score_Clinique" required (ngModelChange)="onChangeFiche7()"
+    [(ngModel)]="fiche7.scoreClinique" #nomHInput="ngModel">
   <mat-error *ngIf="nomHInput.hasError('required')">score clinique must not be empty.</mat-error>
 </mat-form-field>
 
 <br>
 <span class="label">Score EBMT :</span>
 <mat-form-field>
-  <input type="text" matInput placeholder="Score EBMT" ngModel name="Score_EBMT" required [(ngModel)]="scoreEBMT"
+  <input type="number" matInput placeholder="Score EBMT" ngModel name="Score_EBMT" required (ngModelChange)="onChangeFiche7()" [(ngModel)]="fiche7.scoreEBMT"
     #nomHInput="ngModel">
   <mat-error *ngIf="nomHInput.hasError('required')">score EBMT must not be empty.</mat-error>
 </mat-form-field>
@@ -18,7 +18,7 @@
 <span class="label">Score :</span>
 <mat-form-field appearance="fill">
   <mat-label>Score </mat-label>
-  <mat-select [(ngModel)]="score1" ngModel name="score" required>
+  <mat-select [(ngModel)]="fiche7.score" ngModel name="score" required (selectionChange)="onChangeFiche7()" >
     <mat-option *ngFor="let item of score " value="{{item}}">{{item}}</mat-option>
   </mat-select>
 </mat-form-field>
