--- a/src/app/dashboard/fiche2/androgene/androgene.component.html
+++ b/src/app/dashboard/fiche2/androgene/androgene.component.html
@@ -1,7 +1,7 @@
 <mat-form-field class="example-full-width">
   <mat-label>Mois</mat-label>
 
-  <mat-select [(ngModel)]="androgene.mois" ngModel name="mois" required (selectionChange)="onChangeAndrogene()">
+  <mat-select [(ngModel)]="androgene.mois" ngModel name="mois" required>
     <mat-option *ngFor="let item of mois " value="{{item}}">{{item}}</mat-option>
   </mat-select>
 
@@ -11,7 +11,7 @@
 <mat-form-field class="example-full-width">
   <mat-label>Reponse</mat-label>
 
-  <mat-select [(ngModel)]="androgene.reponse" ngModel name="response" required (selectionChange)="onChangeAndrogene()">
+  <mat-select [(ngModel)]="androgene.reponse" ngModel name="response" required>
     <mat-option *ngFor="let item of response " value="{{item}}">{{item}}</mat-option>
   </mat-select>
 
