--- a/src/app/dashboard/fiche2/fiche2.component.html
+++ b/src/app/dashboard/fiche2/fiche2.component.html
@@ -12,8 +12,8 @@
     <mat-form-field class="example-full-width">
       <mat-label>User</mat-label>
 
-      <mat-select [(ngModel)]="selectedUser" [ngModelOptions]="{standalone: true}">
-        <mat-option *ngFor="let item of users$ | async " value="{{item.code}}">{{item.nom}}</mat-option>
+      <mat-select [(value)]="ficheI.codeUser"  name="UserOfFiche" required>
+        <mat-option *ngFor="let item of users$ | async " [value]="item.code" >{{item.nom}}</mat-option>
       </mat-select>
 
     </mat-form-field>
@@ -22,9 +22,9 @@
     <mat-form-field class="example-full-width">
       <mat-label>Date d'enregistrement</mat-label>
 
-      <input matInput [matDatepicker]="picker">
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker></mat-datepicker>
+      <input matInput [matDatepicker]="dateEnreg" [(ngModel)]="ficheI.dateEnregistrement" (click)="do()">
+      <mat-datepicker-toggle matSuffix [for]="dateEnreg"></mat-datepicker-toggle>
+      <mat-datepicker #dateEnreg></mat-datepicker>
 
     </mat-form-field>
 
@@ -38,9 +38,9 @@
     <mat-form-field class="example-full-width">
       <mat-label>Date de diagnostique</mat-label>
 
-      <input matInput [matDatepicker]="picker10">
-      <mat-datepicker-toggle matSuffix [for]="picker10"></mat-datepicker-toggle>
-      <mat-datepicker #picker10></mat-datepicker>
+      <input matInput [matDatepicker]="dateDiag" [(ngModel)]="ficheI.dateDiagnostique" >
+      <mat-datepicker-toggle matSuffix [for]="dateDiag"></mat-datepicker-toggle>
+      <mat-datepicker #dateDiag></mat-datepicker>
 
     </mat-form-field>
 
@@ -49,7 +49,7 @@
       <mat-label>Numéro de Dossier Fiche </mat-label>
 
       <input type="text" matInput placeholder="Numéro de Dossier Fiche" ngModel name="NDFiche" required
-        [(ngModel)]="ndfiche" #ndficheInput="ngModel">
+        [(ngModel)]="ficheI.ndossierFiche" #ndficheInput="ngModel">
       <mat-error *ngIf="ndficheInput.hasError('required')">ndfiche must not be empty.</mat-error>
 
     </mat-form-field>
@@ -76,7 +76,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <fiche2-patient  (patientChange)="this.patientFromChild=$event" ></fiche2-patient>
+      <fiche2-patient></fiche2-patient>
 
     </mat-expansion-panel>
 
@@ -88,7 +88,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <fiche2-histoire-familiale (fiche1Change)="this.fich1FromChild=$event"></fiche2-histoire-familiale>
+      <fiche2-histoire-familiale></fiche2-histoire-familiale>
 
     </mat-expansion-panel>
 
@@ -101,7 +101,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <fiche2-circon-de-decouverte (fiche2Change)="this.fich2FromChild=$event"></fiche2-circon-de-decouverte>
+      <fiche2-circon-de-decouverte></fiche2-circon-de-decouverte>
 
     </mat-expansion-panel>
 
@@ -113,7 +113,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <fiche2-syndrome-malformatif (fiche3Change)="this.fich3FromChild=$event"></fiche2-syndrome-malformatif>
+      <fiche2-syndrome-malformatif></fiche2-syndrome-malformatif>
     </mat-expansion-panel>
 
 
@@ -125,7 +125,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <fiche2-etude-cyto  (cyto1Change)="this.etudeCytoFromChild=$event"  ></fiche2-etude-cyto>
+      <fiche2-etude-cyto></fiche2-etude-cyto>
 
     </mat-expansion-panel>
 
@@ -136,7 +136,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <fiche2-androgene  (androgeneChange)="this.androgeneFromChild=$event" ></fiche2-androgene>
+      <fiche2-androgene></fiche2-androgene>
 
     </mat-expansion-panel>
 
@@ -148,7 +148,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <fiche2-signes-hema (fiche4Change)="this.fich4FromChild=$event"></fiche2-signes-hema>
+      <fiche2-signes-hema></fiche2-signes-hema>
 
     </mat-expansion-panel>
 
@@ -160,7 +160,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <fiche2-biologie-moleculaire (fiche5Change)="this.fich5FromChild=$event"></fiche2-biologie-moleculaire>
+      <fiche2-biologie-moleculaire></fiche2-biologie-moleculaire>
 
     </mat-expansion-panel>
 
@@ -172,7 +172,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <fiche2-congelation-cell (fiche6Change)="this.fich6FromChild=$event"></fiche2-congelation-cell>
+      <fiche2-congelation-cell></fiche2-congelation-cell>
     </mat-expansion-panel>
 
     <mat-expansion-panel>
@@ -182,7 +182,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <fiche2-score-clinique (fiche7Change)="this.fich7FromChild=$event" ></fiche2-score-clinique>
+      <fiche2-score-clinique></fiche2-score-clinique>
     </mat-expansion-panel>
 
     <mat-expansion-panel>
@@ -192,7 +192,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <fiche2-traitement (fiche8Change)="this.fich8FromChild=$event" ></fiche2-traitement>
+      <fiche2-traitement></fiche2-traitement>
     </mat-expansion-panel>
 
 
@@ -200,6 +200,6 @@
 </form>
 <div fxLayoutAlign="center center">
 
-  <button mat-raised-button color="primary" (click)="toFiche()">Ajouter</button>
+  <button mat-raised-button color="primary" (click)="saveFiche()">Ajouter</button>
   <button mat-raised-button color="warn" (click)="toFiche()">Quitter</button>
 </div>
