--- a/src/app/dashboard/fiche2/histoire-familiale/histoire-familiale.component.html
+++ b/src/app/dashboard/fiche2/histoire-familiale/histoire-familiale.component.html
@@ -2,7 +2,7 @@
   <span class="label">Degré de consanguinité des parents</span>
   <mat-form-field appearance="fill">
     <mat-label>Degré de consanguinité des parents</mat-label>
-    <mat-select [(ngModel)]="fiche1.degConsang" ngModel name="dcdp" required (selectionChange)="onChangeFiche1()">
+    <mat-select [(ngModel)]="fiche1.degConsang" ngModel name="dcdp" required>
       <mat-option *ngFor="let item of dConsanguiniteParent " value="{{item}}">{{item}}</mat-option>
     </mat-select>
   </mat-form-field>
@@ -14,7 +14,7 @@
     <span class="label">Numbre de frére(s) et soeur(s) vivants </span>
     <mat-form-field appearance="fill">
       <mat-label>Numbre de frére(s) et soeur(s) vivants </mat-label>
-      <mat-select [(ngModel)]="fiche1.nbVivant" ngModel name="nfsv" required (selectionChange)="onChangeFiche1()">
+      <mat-select [(ngModel)]="fiche1.nbVivant" ngModel name="nfsv" required>
         <mat-option *ngFor="let item of tab " value="{{item}}">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
@@ -23,7 +23,7 @@
     <span class="label">Place de l'enfant dans la fratrie (le plus agé est numero 1 ) </span>
     <mat-form-field appearance="fill">
       <mat-label>Place de l'enfant dans la fratrie </mat-label>
-      <mat-select [(ngModel)]="fiche1.placeEnfant" ngModel name="nfsv" required (selectionChange)="onChangeFiche1()">
+      <mat-select [(ngModel)]="fiche1.placeEnfant" ngModel name="nfsv" required>
         <mat-option *ngFor="let item of tab2 " value="{{item}}">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
@@ -37,7 +37,7 @@
     <span class="label">Décedés par AF </span>
     <mat-form-field appearance="fill">
       <mat-label>Décedés par AF </mat-label>
-      <mat-select [(ngModel)]="fiche1.nbMort" ngModel name="dpaf" required (selectionChange)="onChangeFiche1()">
+      <mat-select [(ngModel)]="fiche1.nbMort" ngModel name="dpaf" required>
         <mat-option *ngFor="let item of tab2 " value="{{item}}">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
@@ -47,7 +47,7 @@
     <span class="label">Mort(s) né(s) </span>
     <mat-form-field appearance="fill">
       <mat-label>Mort(s) né(s) </mat-label>
-      <mat-select [(ngModel)]="fiche1.mortNe" ngModel name="dpaf" required (selectionChange)="onChangeFiche1()">
+      <mat-select [(ngModel)]="fiche1.mortNe" ngModel name="dpaf" required>
         <mat-option *ngFor="let item of tab2 " value="{{item}}">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
@@ -66,7 +66,7 @@
     <span class="label">Fausse(s) couche(s) spontanné(s) </span>
     <mat-form-field appearance="fill">
       <mat-label>Fausse(s) couche(s) spontanné(s) </mat-label>
-      <mat-select [(ngModel)]="fiche1.avortement" ngModel name="dpaf" required (selectionChange)="onChangeFiche1()">
+      <mat-select [(ngModel)]="fiche1.avortement" ngModel name="dpaf" required>
         <mat-option *ngFor="let item of tab " value="{{item}}">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
@@ -86,7 +86,7 @@
     <span class="label">Cousin(s) </span>
     <mat-form-field appearance="fill">
       <mat-label>Cousin(s) </mat-label>
-      <mat-select [(ngModel)]="fiche1.nbCousin" ngModel name="dpaf" required (selectionChange)="onChangeFiche1()">
+      <mat-select [(ngModel)]="fiche1.nbCousin" ngModel name="dpaf" required>
         <mat-option *ngFor="let item of tab2 " value="{{item}}">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
@@ -95,7 +95,7 @@
     <span class="label">Membres de la famille atteints de cancer </span>
     <mat-form-field appearance="fill">
       <mat-label>Membres de la famille atteints de cancer </mat-label>
-      <mat-select [(ngModel)]="fiche1.nbMembre" ngModel name="dpaf" required (selectionChange)="onChangeFiche1()">
+      <mat-select [(ngModel)]="fiche1.nbMembre" ngModel name="dpaf" required>
         <mat-option *ngFor="let item of tab2 " value="{{item}}">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
@@ -107,7 +107,7 @@
     <br>
     <mat-form-field>
       <input type="text" matInput placeholder="Arbre généalogique de Fonconie " ngModel name="Arbre_genea" required
-        [(ngModel)]="fiche1.arbreGenealogique" (ngModelChange)="onChangeFiche1()" #arbreGeneaInput="ngModel">
+        [(ngModel)]="fiche1.arbreGenealogique"  #arbreGeneaInput="ngModel">
       <mat-error *ngIf="arbreGeneaInput.hasError('required')">arbreGenea must not be empty.</mat-error>
     </mat-form-field>
     <br>
@@ -119,7 +119,7 @@
 
     <mat-form-field>
       <input type="text" matInput placeholder="Arbre généalogique de cancer" ngModel name="Arbre_gen_cancer" required
-        [(ngModel)]="fiche1.arbreGenealogiqueCancer" (ngModelChange)="onChangeFiche1()" #arbreGeneacanInput="ngModel">
+        [(ngModel)]="fiche1.arbreGenealogiqueCancer"  #arbreGeneacanInput="ngModel">
       <mat-error *ngIf="arbreGeneacanInput.hasError('required')">arbreGeneacan must not be empty.</mat-error>
     </mat-form-field>
 
