--- a/src/app/dashboard/fiche2/congelation-cell/congelation-cell.component.html
+++ b/src/app/dashboard/fiche2/congelation-cell/congelation-cell.component.html
@@ -13,8 +13,8 @@
       <span class="label">Laboratoire :</span>
       <mat-form-field appearance="fill">
         <mat-label>Laboratoire </mat-label>
-        <mat-select [(value)]="fiche6.labo" ngModel name="resultat" required>
-          <mat-option *ngFor="let item of laboratoires$ | async" [value]="item.nom">{{item.nom}}</mat-option>
+        <mat-select [(ngModel)]="fiche6.labo" ngModel name="resultat" required>
+          <mat-option *ngFor="let item of lab" value="{{item}}">{{item}}</mat-option>
         </mat-select>
       </mat-form-field>
     </div>
