--- a/src/app/dashboard/fiche2/syndrome-malformatif/syndrome-malformatif.component.html
+++ b/src/app/dashboard/fiche2/syndrome-malformatif/syndrome-malformatif.component.html
@@ -10,7 +10,7 @@
     <mat-form-field appearance="fill">
       <mat-label>Taille </mat-label>
       <mat-select [(ngModel)]="fiche3.tailleNaiss" ngModel name="taille" required>
-        <mat-option *ngFor="let item of tab " value="{{item}}">{{item}}</mat-option>
+        <mat-option *ngFor="let item of tab " [value]="item">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
     <span class="label">Cm</span>
@@ -25,7 +25,7 @@
     <mat-form-field appearance="fill">
       <mat-label>Poids </mat-label>
       <mat-select [(ngModel)]="fiche3.poidsNaiss" ngModel name="poids" required>
-        <mat-option *ngFor="let item of tab2 " value="{{item}}">{{item}}</mat-option>
+        <mat-option *ngFor="let item of tab2 " [value]="item">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
     <span class="label">Kg</span>
@@ -68,7 +68,7 @@
     <mat-form-field appearance="fill">
       <mat-label>Age chronologique au diagnostique </mat-label>
       <mat-select [(ngModel)]="fiche3.aageChDiag" ngModel name="ageChronoDiag" required>
-        <mat-option *ngFor="let item of tab3 " value="{{item}}">{{item}}</mat-option>
+        <mat-option *ngFor="let item of tab3 " [value]="item">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
     <span class="label">ans</span>
@@ -79,7 +79,7 @@
     <mat-form-field appearance="fill">
       <mat-label>Age osseux </mat-label>
       <mat-select [(ngModel)]="fiche3.aageOssDiag" ngModel name="ageOsseux" required>
-        <mat-option *ngFor="let item of tab3 " value="{{item}}">{{item}}</mat-option>
+        <mat-option *ngFor="let item of tab3 " [value]="item">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
     <span class="label">ans</span>
@@ -90,7 +90,7 @@
     <mat-form-field appearance="fill">
       <mat-label>Retard par rapport à l'age chronologique </mat-label>
       <mat-select [(ngModel)]="fiche3.ageRetard" ngModel name="rpralc" required>
-        <mat-option *ngFor="let item of tab4 " value="{{item}}">{{item}}</mat-option>
+        <mat-option *ngFor="let item of tab4 " [value]="item">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
     <span class="label">mois</span>
@@ -101,7 +101,7 @@
     <mat-form-field appearance="fill">
       <mat-label>Poids </mat-label>
       <mat-select [(ngModel)]="fiche3.poids" ngModel name="po" required>
-        <mat-option *ngFor="let item of tab5 " value="{{item}}">{{item}}</mat-option>
+        <mat-option *ngFor="let item of tab5 " [value]="item">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
     <span class="label">Kg</span>
@@ -112,7 +112,7 @@
     <mat-form-field appearance="fill">
       <mat-label>Taille </mat-label>
       <mat-select [(ngModel)]="fiche3.taille" ngModel name="taille" required>
-        <mat-option *ngFor="let item of tab6 " value="{{item}}">{{item}}</mat-option>
+        <mat-option *ngFor="let item of tab6 " [value]="item">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
     <span class="label">Cm</span>
@@ -125,7 +125,7 @@
     <mat-form-field appearance="fill">
       <mat-label>mAgeChDiag</mat-label>
       <mat-select [(ngModel)]="fiche3.mageChDiag" ngModel name="mAgeChDiag" required>
-        <mat-option *ngFor="let item of tab4 " value="{{item}}">{{item}}</mat-option>
+        <mat-option *ngFor="let item of tab4 " [value]="item">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
     <span class="label">mois</span>
@@ -137,7 +137,7 @@
     <mat-form-field appearance="fill">
       <mat-label>mAgeOssDiag</mat-label>
       <mat-select [(ngModel)]="fiche3.mageOssDiag" ngModel name="mAgeOssDiag" required>
-        <mat-option *ngFor="let item of tab4 " value="{{item}}">{{item}}</mat-option>
+        <mat-option *ngFor="let item of tab4 " [value]="item">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
     <span class="label">mois</span>
